updated readme file

--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
 </head>
 <body>
     <div class="heading">
-        <h1 class="title">Promise Task</h1>
-        <p id="description">
-         Day-20-Task-1
-        </p>
+        <h1 class="title">Satelite Informations</h1>
+        
       </div>
       <div class="satelite">
         
